<?xml version="1.0"?>
<package format="2">
  <name>rospy_misc</name>
  <version>0.0.0</version>
  <description>The rospy_misc package</description>

  <maintainer email="yuma.hiramatsu@gmail.com">Yuma Hiramatsu</maintainer>
  <author email="yuma.hiramatsu@gmail.com">Yuma Hiramatsu</author>

  <license>Apatch License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export></export>
</package>
